# BPR

./: C0_Baseline_meta.sh  README.md  Topology.drawio  autocapture_fixed.sh  git_commands.md  packets_check.sh
ATTACKER/: CMakeLists.txt  Makefile  fdi_goose  fdi_goose.c
Analysis_Results/: analysis.py  pca_analysis.py  per_run_analysis.py  summary.md
C0_Baseline/: pcap_to_csv.sh
C0_Baseline/Baseline03/: baseline_DPSRS-eth5_20260124_010204.pcapng
C0_Baseline/Baseline05/: baseline_DPSRS-eth5_20260124_012053.pcapng
C0_Baseline/Baseline06/: baseline_DPSRS-eth5_20260124_012844.pcapng
C0_Baseline/Baseline08/: baseline_DPSRS-eth5_20260124_110429.pcapng
C1_FDI/: pcap_to_csv.sh
C1_FDI/C1_FDI_trial01/: fdi_DPSRS-eth5_20260124_002331.pcapng
C1_FDI/C1_FDI_trial02/: fdi_DPSRS-eth5_20260124_114048.pcapng
C1_FDI/C1_FDI_trial03/: fdi_DPSRS-eth5_20260124_122656.pcapng
C1_FDI/C1_FDI_trial04/: fdi_DPSRS-eth5_20260124_123758.pcapng
C1_FDI/C1_FDI_trial07/: fdi_DPSRS-eth5_20260124_134742.pcapng
C1_FDI/C1_FDI_trial09/: fdi_DPSRS-eth5_20260124_142012.pcapng
C1_FDI/C1_FDI_trial10/: fdi_DPSRS-eth5_20260124_143944.pcapng
C2_Delay/C2_Delay_30s_trial01/: fdi_DPSRS-eth5_20260124_003245.pcapng
C2_Delay/C2_Delay_30s_trial02/: fdi_DPSRS-eth5_20260124_122207.pcapng
C2_Delay/C2_Delay_30s_trial03/: fdi_DPSRS-eth5_20260124_123235.pcapng
C2_Delay/C2_Delay_30s_trial07/: fdi_DPSRS-eth5_20260124_135155.pcapng
C2_Delay/C2_Delay_30s_trial09/: fdi_DPSRS-eth5_20260124_143022.pcapng
trials/C0_Baseline/: C0_Baseline.meta.json  pcap_csv_single.sh
trials/C1_FDI/: C1_FDI.meta.json
(+46 files in other folders)
